--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "codes/lib/PNG-2LPTic"]
 	path = codes/lib/PNG-2LPTic
-	url = https://github.com/SiyiZhao/PNG-2LPTic
+	url = git@github.com:SiyiZhao/PNG-2LPTic.git
